--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=10MB
+
+org.zerock.upload.path = upload
