--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.modelmapper:modelmapper:3.1.1'
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+	implementation 'net.coobird:thumbnailator:0.4.19'
 }
 
 tasks.named('test') {
